Update website: fix link color to be more readable, add recent articles section on index.html

--- a/website/HTML/css/layout.css
+++ b/website/HTML/css/layout.css
@@ -51,12 +51,12 @@ li a {
   font-size: 16px;
   font-weight: 500;
   font-family: Hind, sans-serif;
-  color: #515769;
+  color: #548ac8;
 }
 
 a {
   font-family: Hind, sans-serif;
-  color: #81848f;
+  color: #548ac8;
   outline: 0;
 }
 
